src/pdf.c
/* A recursive-descent parser generated by peg 0.1.9 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 38
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( ctx->begin= ctx->pos, 1)
#endif
#ifndef YY_END
#define YY_END		( ctx->end= ctx->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *ctx, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *buf;
  int       buflen;
  int       pos;
  int       limit;
  char     *text;
  int       textlen;
  int       begin;
  int       end;
  int       textmax;
  yythunk  *thunks;
  int       thunkslen;
  int       thunkpos;
  YYSTYPE   yy;
  YYSTYPE  *val;
  YYSTYPE  *vals;
  int       valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext yyctx0;
yycontext *yyctx= &yyctx0;
#endif

YY_LOCAL(int) yyrefill(yycontext *ctx)
{
  int yyn;
  while (ctx->buflen - ctx->pos < 512)
    {
      ctx->buflen *= 2;
      ctx->buf= (char *)realloc(ctx->buf, ctx->buflen);
    }
  YY_INPUT((ctx->buf + ctx->pos), yyn, (ctx->buflen - ctx->pos));
  if (!yyn) return 0;
  ctx->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *ctx)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  ++ctx->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *ctx, int c)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  if ((unsigned char)ctx->buf[ctx->pos] == c)
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *ctx, char *s)
{
  int yysav= ctx->pos;
  while (*s)
    {
      if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
      if (ctx->buf[ctx->pos] != *s)
        {
          ctx->pos= yysav;
          return 0;
        }
      ++s;
      ++ctx->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *ctx, unsigned char *bits)
{
  int c;
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  c= (unsigned char)ctx->buf[ctx->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *ctx, yyaction action, int begin, int end)
{
  while (ctx->thunkpos >= ctx->thunkslen)
    {
      ctx->thunkslen *= 2;
      ctx->thunks= (yythunk *)realloc(ctx->thunks, sizeof(yythunk) * ctx->thunkslen);
    }
  ctx->thunks[ctx->thunkpos].begin=  begin;
  ctx->thunks[ctx->thunkpos].end=    end;
  ctx->thunks[ctx->thunkpos].action= action;
  ++ctx->thunkpos;
}

YY_LOCAL(int) yyText(yycontext *ctx, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (ctx->textlen < (yyleng + 1))
	{
	  ctx->textlen *= 2;
	  ctx->text= (char *)realloc(ctx->text, ctx->textlen);
	}
      memcpy(ctx->text, ctx->buf + begin, yyleng);
    }
  ctx->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *ctx)
{
  int pos;
  for (pos= 0;  pos < ctx->thunkpos;  ++pos)
    {
      yythunk *thunk= &ctx->thunks[pos];
      int yyleng= thunk->end ? yyText(ctx, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, ctx->text));
      thunk->action(ctx, ctx->text, yyleng);
    }
  ctx->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *ctx)
{
  if ((ctx->limit -= ctx->pos))
    {
      memmove(ctx->buf, ctx->buf + ctx->pos, ctx->limit);
    }
  ctx->begin -= ctx->pos;
  ctx->end -= ctx->pos;
  ctx->pos= ctx->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *ctx, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(ctx);
      yyCommit(ctx);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *ctx, char *text, int count)  { ctx->val += count; }
YY_LOCAL(void) yyPop(yycontext *ctx, char *text, int count)   { ctx->val -= count; }
YY_LOCAL(void) yySet(yycontext *ctx, char *text, int count)   { ctx->val[count]= ctx->yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(ctx, yythunkpos0)

YY_RULE(int) yy_SP(yycontext *ctx); /* 38 */
YY_RULE(int) yy_XREF_ENTRY_FLAG(yycontext *ctx); /* 37 */
YY_RULE(int) yy_XREFTAB(yycontext *ctx); /* 36 */
YY_RULE(int) yy_POSITIVE(yycontext *ctx); /* 35 */
YY_RULE(int) yy_LF(yycontext *ctx); /* 34 */
YY_RULE(int) yy_CR(yycontext *ctx); /* 33 */
YY_RULE(int) yy_ESCPAREN(yycontext *ctx); /* 32 */
YY_RULE(int) yy_STRA(yycontext *ctx); /* 31 */
YY_RULE(int) yy_STRE(yycontext *ctx); /* 30 */
YY_RULE(int) yy_STREND(yycontext *ctx); /* 29 */
YY_RULE(int) yy_STR(yycontext *ctx); /* 28 */
YY_RULE(int) yy_STRBGN(yycontext *ctx); /* 27 */
YY_RULE(int) yy_HEXSTR(yycontext *ctx); /* 26 */
YY_RULE(int) yy_STRING(yycontext *ctx); /* 25 */
YY_RULE(int) yy_ARRAY(yycontext *ctx); /* 24 */
YY_RULE(int) yy_REAL(yycontext *ctx); /* 23 */
YY_RULE(int) yy_NUM(yycontext *ctx); /* 22 */
YY_RULE(int) yy_REF(yycontext *ctx); /* 21 */
YY_RULE(int) yy_ALPHANUM(yycontext *ctx); /* 20 */
YY_RULE(int) yy_DE(yycontext *ctx); /* 19 */
YY_RULE(int) yy_ID(yycontext *ctx); /* 18 */
YY_RULE(int) yy_KWORD(yycontext *ctx); /* 17 */
YY_RULE(int) yy_VALUE(yycontext *ctx); /* 16 */
YY_RULE(int) yy_KEY(yycontext *ctx); /* 15 */
YY_RULE(int) yy_DB(yycontext *ctx); /* 14 */
YY_RULE(int) yy_DICT(yycontext *ctx); /* 13 */
YY_RULE(int) yy_EOF(yycontext *ctx); /* 12 */
YY_RULE(int) yy_GARBAGE(yycontext *ctx); /* 11 */
YY_RULE(int) yy_STARTXREF(yycontext *ctx); /* 10 */
YY_RULE(int) yy_TRAILER(yycontext *ctx); /* 9 */
YY_RULE(int) yy_XREF(yycontext *ctx); /* 8 */
YY_RULE(int) yy_DELIM(yycontext *ctx); /* 7 */
YY_RULE(int) yy_OBJ(yycontext *ctx); /* 6 */
YY_RULE(int) yy_STREAM(yycontext *ctx); /* 5 */
YY_RULE(int) yy_SPACE(yycontext *ctx); /* 4 */
YY_RULE(int) yy_EOL(yycontext *ctx); /* 3 */
YY_RULE(int) yy_COMMENT(yycontext *ctx); /* 2 */
YY_RULE(int) yy_start(yycontext *ctx); /* 1 */

YY_ACTION(void) yy_1_EOF(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_EOF\n"));
   parse_finish(); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_KWORD(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_3_KWORD\n"));
   push (eNull, 0, 0); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_KWORD(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_KWORD\n"));
   push (eBool, 1, NULL); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_KWORD(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_KWORD\n"));
  push(eBool, 0, NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_XREF_ENTRY_FLAG(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_XREF_ENTRY_FLAG\n"));
  push(eInt, yytext[0], NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_COMMENT(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_COMMENT\n"));
  pop_comment(yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_REAL(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_REAL\n"));
  push(eReal,atof(yytext), NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_NUM(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_NUM\n"));
  push(eInt,atoi(yytext), NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_GARBAGE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_GARBAGE\n"));
  pop();;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_STARTXREF(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_STARTXREF\n"));
  pdf_obj t = pop(); xref_start(t.value.i);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_TRAILER(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_TRAILER\n"));
  read_trailer();;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_XREFTAB(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_3_XREFTAB\n"));
  pdf_obj t, t1; t = pop(); t1 = pop(); xref_append(t.value.i, t1.value.i, pop());;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_XREFTAB(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_XREFTAB\n"));
  push(eInt,atoi(yytext), NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_XREFTAB(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_XREFTAB\n"));
  push(eInt,atoi(yytext), NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_XREF(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_XREF\n"));
  pdf_obj t; t = pop(); xref_new(t.value.i, atoi(yytext));;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_XREF(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_XREF\n"));
  push(eInt,atoi(yytext), NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_REF(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_REF\n"));
   pdf_obj t; int n, g; t = pop(); g = t.value.i; t = pop(); n = t.value.i; push_ref(eRef, n, g);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_STREAM(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_3_STREAM\n"));
  pop_stream( parser_inst->file_position, -1);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_STREAM(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_STREAM\n"));
  pop_stream( parser_inst->file_position+1, 0);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_STREAM(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_STREAM\n"));
   push(eObjMarker, 0, NULL); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_OBJ(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_OBJ\n"));
  pop_obj();;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_OBJ(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_OBJ\n"));
   push(eObjMarker, 0, NULL); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_HEXSTR(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_HEXSTR\n"));
  push(eHexString, 0, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_5_STRE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_5_STRE\n"));
  push_literal("()", 2);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_4_STRE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_4_STRE\n"));
  push_literal(")", 1);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_STRE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_3_STRE\n"));
  push_literal("(", 1);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_STRE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_STRE\n"));
  push_literal(yytext, yyleng);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_STRE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_STRE\n"));
  push_literal(yytext, yyleng);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_STRING(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_STRING\n"));
  push_literal(NULL, 0);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_ARRAY(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_ARRAY\n"));
   push_array();  ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_ARRAY(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_ARRAY\n"));
   push(eArrayMarker, 0, NULL); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_KEY(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_KEY\n"));
  push(eKey, 0, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_DE(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_DE\n"));
  pop_dict();;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_DB(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_DB\n"));
  push(eDictMarker, 0, NULL);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_start(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_start\n"));
  print_stack();;
#undef yythunkpos
#undef yypos
#undef yy
}
